Add contacts controller

--- a/App/appsettings.Development.json
+++ b/App/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Salesforce": {
+    "Account": {
+      "BaseUri": "https://{domainName}.my.salesforce.com",
+      "ApiVersion": "vXX.X",
+      "ClientId": "{clientId}",
+      "ClientSecret": "{clientSecret}"
+    },
+    "Credentials": {
+      "Username": "{username}",
+      "Password": "{password}"
+    }
   }
 }
